# serializer version: 1
# name: test_displayed_error
  '''
  <main class="layout__inner" id="main-content" role="main">
   <div class="container">
    <h1>
     Login
    </h1>
    <form action="/auth/login" aria-label="Login form" class="login-form" method="post">
     <input name="redirect" type="hidden" value="/yaks"/>
     <div class="login-form__group">
      <label class="login-form__label" for="email">
       Email
      </label>
      <input aria-required="true" autocomplete="email" class="login-form__control" id="email" name="email" required="" type="email"/>
     </div>
     <div class="login-form__group">
      <label class="login-form__label" for="password">
       Password
      </label>
      <input aria-required="true" autocomplete="current-password" class="login-form__control" id="password" name="password" required="" type="password"/>
     </div>
     <div aria-live="polite" class="alert alert--warn" role="alert">
      <strong>
       Error:
      </strong>
      Invalid email or password
     </div>
     <button class="button button--primary" type="submit">
      Login
     </button>
    </form>
    <p class="text-center text-sm">
     Note: Users must be created by an administrator using the CLI tool.
    </p>
   </div>
  </main>
  
  '''
# ---
# name: test_login_get_shows_form
  '''
  <main class="layout__inner" id="main-content" role="main">
   <div class="container">
    <h1>
     Login
    </h1>
    <form action="/auth/login" aria-label="Login form" class="login-form" method="post">
     <div class="login-form__group">
      <label class="login-form__label" for="email">
       Email
      </label>
      <input aria-required="true" autocomplete="email" class="login-form__control" id="email" name="email" required="" type="email"/>
     </div>
     <div class="login-form__group">
      <label class="login-form__label" for="password">
       Password
      </label>
      <input aria-required="true" autocomplete="current-password" class="login-form__control" id="password" name="password" required="" type="password"/>
     </div>
     <button class="button button--primary" type="submit">
      Login
     </button>
    </form>
    <p class="text-center text-sm">
     Note: Users must be created by an administrator using the CLI tool.
    </p>
   </div>
  </main>
  
  '''
# ---
